I#1286 - WebView: Change how scheme handlers are registered

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1286